test: fps game (#5)
add fps game test