@@ -74,13 +74,16 @@
                          ["eastwood"]]
             "clj-kondo" ["with-profile" "+dev" "run" "-m" "clj-kondo.main"]}
 
-  :jvm-opts ^:replace ["-XX:-OmitStackTraceInFastThrow"
+  :jvm-opts ^:replace ["-XX:+UseZGC"
+                       "-XX:-OmitStackTraceInFastThrow"
                        "-XX:+ScavengeBeforeFullGC"
                        "-XX:+IgnoreUnrecognizedVMOptions"
                        "-Djava.net.preferIPv4Stack=true"
                        "-Dfile.encoding=UTF-8"]
 
-  :profiles {:dev  {:dependencies [[clj-kondo "2020.10.10"]]
+  :profiles {:dev  {:dependencies [[clj-kondo "2020.10.10"]
+                                   [org.clojure/tools.logging "1.1.0"]]
                     :repl-options {:init-ns jme-clj.core}}
-             :test {:dependencies   [[clj-kondo "2020.10.10"]]
+             :test {:dependencies   [[clj-kondo "2020.10.10"]
+                                     [org.clojure/tools.logging "1.1.0"]]
                     :resource-paths ["test/resources"]}})
